--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         </li>
                         <li>
                             <div class="card">
-                                <p class="title">Super Cool Project</p>
+                                <p class="title">Less Cool Project</p>
                                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
                                 <div class="card-actions">
                                     <img src="./icons/favorites.png" alt="favorites-icon" class="icon">
@@ -125,7 +125,7 @@
                         </li>
                         <li>
                             <div class="card">
-                                <p class="title">Super Cool Project</p>
+                                <p class="title">Impossible App</p>
                                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
                                 <div class="card-actions">
                                     <img src="./icons/favorites.png" alt="favorites-icon" class="icon">
@@ -136,7 +136,7 @@
                         </li>
                         <li>
                             <div class="card">
-                                <p class="title">Super Cool Project</p>
+                                <p class="title">Easy Peasy App</p>
                                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
                                 <div class="card-actions">
                                     <img src="./icons/favorites.png" alt="favorites-icon" class="icon">
@@ -147,7 +147,7 @@
                         </li>
                         <li>
                             <div class="card">
-                                <p class="title">Super Cool Project</p>
+                                <p class="title">Ad blocker</p>
                                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
                                 <div class="card-actions">
                                     <img src="./icons/favorites.png" alt="favorites-icon" class="icon">
@@ -158,7 +158,7 @@
                         </li>
                         <li>
                             <div class="card">
-                                <p class="title">Super Cool Project</p>
+                                <p class="title">Money Maker</p>
                                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
                                 <div class="card-actions">
                                     <img src="./icons/favorites.png" alt="favorites-icon" class="icon">
@@ -175,20 +175,22 @@
                         <ul>
                             <li>
                                 <div class="anc">
-                                    <p class="anc-title">Site Maintenance</p>
-                                    <p class="anc-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                                    <p class="title">Site Maintenance</p>
+                                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
                                 </div>
                             </li>
+                            <hr>
                             <li>
                                 <div class="anc">
-                                    <p class="anc-title">Community Share Day</p>
-                                    <p class="anc-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                                    <p class="title">Community Share Day</p>
+                                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
                                 </div>
                             </li>
+                            <hr>
                             <li>
                                 <div class="anc">
-                                    <p class="anc-title">Updated Privacy Policy</p>
-                                    <p class="anc-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                                    <p class="title">Updated Privacy Policy</p>
+                                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
                                 </div>
                             </li>
                         </ul>
@@ -197,9 +199,53 @@
                     <p>Trending</p>
                     <div class="trending">
                         <ul>
-                            <li>a</li>
-                            <li>b</li>
-                            <li>c</li>
+                            <li>
+                                <div class="trn">
+                                    <div class="profile">
+                                        <img src="./icons/profile-pic.png" alt="profile-pic-icon" class="icon profile">
+                                    </div>
+                                    <div>
+                                        <p class="user">@tegan</p>
+                                        <p class="project">World Peace Builder</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <hr>
+                            <li>
+                                <div class="trn">
+                                    <div class="profile">
+                                        <img src="./icons/profile-pic.png" alt="profile-pic-icon" class="icon profile">
+                                    </div>
+                                    <div>  
+                                        <p class="user">@sushiroll29</p>
+                                        <p class="project">Super Cool Project</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <hr>
+                            <li>
+                                <div class="trn">
+                                    <div class="profile">
+                                        <img src="./icons/profile-pic.png" alt="profile-pic-icon" class="icon profile">
+                                    </div>
+                                    <div>
+                                        <p class="user">@kendall</p>
+                                        <p class="project">Life Changing App</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <hr>
+                            <li>
+                                <div class="trn">
+                                    <div class="profile">
+                                        <img src="./icons/profile-pic.png" alt="profile-pic-icon" class="icon profile">
+                                    </div>
+                                    <div>
+                                        <p class="user">@alex</p>
+                                        <p class="project">No Traffic Maker</p>
+                                    </div>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
