--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         </li>
                         <li>
                             <div class="card">
-                                <p class="title">Super Cool Project</p>
+                                <p class="title">Another Super Cool Project</p>
                                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
                                 <div class="card-actions">
                                     <img src="./icons/favorites.png" alt="favorites-icon" class="icon">
