Add icons source

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                     <h4>Privacy</h4>
                 </li>
             </ul>
+            <span>
+                    © All icons by <a href="https://icons8.com">Icons8</a>.
+            </span>
         </div>
         <div class="main">
             <div class="header">
@@ -67,7 +70,7 @@
                 <div class="top right">
                     <img src="./icons/notification.png" alt="notification-icon" class="icon notification">
                     <img src="./icons/profile-pic.png" alt="profile-pic-icon" class="icon profile">
-                    <span>Sushi Roll</span>
+                    <span><a href="https://github.com/sushiroll29/admin-dashboard">Sushi Roll</a></span>
                 </div>
                 <div class="bottom left">
                     <div class="profile-picture">
@@ -75,7 +78,7 @@
                     </div>
                     <div class="profile">
                         <p class="greeting">Hi there,</p>
-                    <p>Sushi Roll (@sushiroll29)</p>
+                    <p><a href="https://github.com/sushiroll29/admin-dashboard">Sushi Roll (@sushiroll29)</a></p>
                     </div
                 ></div>
                 <div class="bottom right">
